--- a/index.html
+++ b/index.html
@@ -111,8 +111,8 @@
                             Academia Crandi ¿Cuál es la importancia de la accesibilidad web?
                         </a>
                         <br>
-                        <a href="https://www.inboundcycle.com/diccionario-marketing-online/usabilidad-web" target="">
-                            Usabilidad web: qué es, recomendaciones para mejorarla y ejemplos
+                        <a href="https://www.hiberus.com/crecemos-contigo/principios-de-accesibilidad-web/" target="">
+                            Principios de accesibilidad web
                         </a>
                     </footer>
                 </blockquote>
